k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - env:
          - name: MONGO_HOST
            value: mongodb
          - name: MONGO_PORT
            value: "27017"
          - name: MONGO_DB_NAME
            value: mydb
          - name: MONGO_USERNAME
            value: admin
          - name: MONGO_PASSWORD
            value: secret
          image: ghcr.io/alialaca/order-service:v1.0.0-rc.2
          imagePullPolicy: IfNotPresent
          name: order-service
          resources:
            requests:
              memory: "256Mi"
              cpu: "128m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8080
      targetPort: 8080
